--- a/mdui/src/styles/variable/global.less
+++ b/mdui/src/styles/variable/global.less
@@ -10,11 +10,11 @@
 
 // z-index
 @z-index-appbar: 1000;
-@z-index-overlay: 2000;
+@z-index-overlay: 8000;
 @z-index-drawer: 5000;
-@z-index-dialog: 6000;
+@z-index-dialog: 9000;
 @z-index-snackbar: 7000;
-@z-index-tooltip: 9000;
+@z-index-tooltip: 6000;
 @z-index-fab: 4000;
 
 // 深色颜色的不透明度
@@ -40,8 +40,8 @@
 @button-height: 36px;
 
 // 应用栏高度
-@appbar-height-xs-landscape: 48px;  // 横屏
-@appbar-height-xs-portrait: 56px;   // 竖屏
+@appbar-height-xs-landscape: 48px; // 横屏
+@appbar-height-xs-portrait: 56px; // 竖屏
 @appbar-height-sm: 64px;
 
 // 应用栏图标大小
